third_party/rust/paste/tests/ui/no-env-var.rs
use paste::paste;

paste! {
    fn [<a env!("PASTE_UNKNOWN") b>]() {}
}

fn main() {}
